--- a/app/src/main/res/layout/fragment_generate_reports.xml
+++ b/app/src/main/res/layout/fragment_generate_reports.xml
@@ -1,14 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    android:orientation="vertical"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#aaa"
     tools:context=".view.meals.list.ListMealsFragment">
 
-    <TextView
+    <com.github.chuross.library.ExpandableLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Generate reports" />
+        app:exl_expanded="false"
+        app:exl_duration="200"
+        android:id="@+id/period_expandable_layout"
+        android:layout_height="wrap_content">
 
-</FrameLayout>
+        <android.support.constraint.ConstraintLayout
+            android:background="@color/primary"
+            android:layout_width="match_parent"
+            android:layout_height="72dp">
+
+            <Spinner
+                android:backgroundTint="@color/white"
+                android:id="@+id/period_spinner"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+
+
+        </android.support.constraint.ConstraintLayout>
+    </com.github.chuross.library.ExpandableLayout>
+
+
+</LinearLayout>
